--- a/Seti/social_network/templates/social_networks/model_form_upload.html
+++ b/Seti/social_network/templates/social_networks/model_form_upload.html
@@ -1,11 +1,18 @@
-{% extends "social_networks/base.html" %}
-
-{% block content %}
-  <form method="post" enctype="multipart/form-data">
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Загрузка</title>
+</head>
+<body>
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="document">
-<!--    {{ form.as_p }}-->
+    <!--    {{ form.as_p }}-->
     <button type="submit">Upload</button>
-  </form>
-
-{% endblock %}
+</form>
+</body>
+</html>
