--- a/Seti/social_network/templates/social_networks/base.html
+++ b/Seti/social_network/templates/social_networks/base.html
@@ -9,7 +9,7 @@
     <input id="room-name-input" type="text" size="100"/><br/>
     <input id="room-name-submit" type="button" value="Enter"/>
     <p>
-        <a href="{% url 'inform_comp' %}">Информация по компьютере</a><br>
+        <a href="{% url 'inform_comp' %}">Информация о компьютере</a><br>
         <a href="{% url 'upload' %}">Загрузка</a><br>
         <a href="{% url 'download' %}">Выгрузка</a><br>
     </p>
