--- a/Seti/social_network/templates/social_networks/base.html
+++ b/Seti/social_network/templates/social_networks/base.html
@@ -14,6 +14,10 @@
         <a href="{% url 'download' %}">Выгрузка</a><br>
     </p>
 </body>
+
+    {% block content %}
+
+    {% endblock %}
     <script>
         document.querySelector('#room-name-input').focus();
         document.querySelector('#room-name-input').onkeyup = function(e) {
