--- a/Seti/social_network/templates/social_networks/create.html
+++ b/Seti/social_network/templates/social_networks/create.html
@@ -1,27 +1,17 @@
-{% extends 'social_networks/base.html' %}
-
-{% block title %}
-    Сreate
-{% endblock %}
-
-
-{% block content %}
-
-    <form action="{% url 'post' %}" method="post">
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <form method="post">
         {% csrf_token %}
-
-        {% for field in form %}
-                {% if field.errors %}
-                    {{ field.errors }}
-                {% endif %}
-
-                {{ field.label }}
-                {{ field }}
-        {% endfor %}
-
-
-        <button type="submit" class="btn btn-primary">
-            Create Post
-        </button>
+        {{ form.text }} <br>
+        <button type="submit">Добавить</button>
     </form>
-{% endblock %}
+</body>
+</html>
