--- a/Seti/social_network/templates/social_networks/base.html
+++ b/Seti/social_network/templates/social_networks/base.html
@@ -12,6 +12,8 @@
         <a href="{% url 'inform_comp' %}">Информация о компьютере</a><br>
         <a href="{% url 'upload' %}">Загрузка</a><br>
         <a href="{% url 'download' %}">Выгрузка</a><br>
+        <a href="{% url 'post' %}">Посты</a><br>
+        <a href="{% url 'create_post' %}">Создать пост</a><br>
     </p>
 </body>
 
