--- a/Seti/social_network/templates/social_networks/download.html
+++ b/Seti/social_network/templates/social_networks/download.html
@@ -5,14 +5,13 @@
     <title>Выгрузка</title>
 </head>
 <body>
-  {% for document in document_list %}
-
-     <a href="{{ document.document.url }}" download>
-         <p>
-         Скачать файл - {{ document.description }}
-         </p>
-     </a>
-
-  {% endfor %}
+    <h4>Список файлов: </h4>
+    {% for document in document_list %}
+        <a href="{{ document.document.url }}" download>
+            <p>
+            Скачать файл - {{ document.description }}
+            </p>
+        </a>
+    {% endfor %}
 </body>
 </html>
